--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "GymPass style app.",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/server.ts",
+    "dev": "tsx --env-file .env watch src/server.ts",
     "start": "node build/server.js",
     "build": "tsup src --out-dir build"
   },
@@ -12,12 +12,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "@types/node": "22.10.1",
     "tsup": "8.3.5",
     "tsx": "4.19.2",
     "typescript": "5.7.2"
   },
   "dependencies": {
-    "fastify": "5.1.0"
+    "fastify": "5.1.0",
+    "zod": "3.23.8"
   }
 }
