--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,12 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "_version": "20.1.0",
   "compilerOptions": {
-    "lib": [
-      "es2023"
-    ],
+    "lib": ["es2023"],
     "module": "node16",
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
     "target": "es2022",
     "strict": true,
     "esModuleInterop": true,
