--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@types/node": "22.10.1",
+    "prisma": "6.0.1",
     "tsup": "8.3.5",
     "tsx": "4.19.2",
     "typescript": "5.7.2"
