--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "5.7.2"
   },
   "dependencies": {
+    "@prisma/client": "6.0.1",
     "fastify": "5.1.0",
     "zod": "3.23.8"
   }
