--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "GymPass style app.",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx --env-file .env watch src/server.ts",
+    "dev": "tsx watch --env-file .env src/server.ts",
     "start": "node build/server.js",
     "build": "tsup src --out-dir build"
   },
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@types/bcryptjs": "2.4.6",
     "@types/node": "22.10.1",
     "prisma": "6.0.1",
     "tsup": "8.3.5",
@@ -21,6 +22,7 @@
   },
   "dependencies": {
     "@prisma/client": "6.0.1",
+    "bcryptjs": "2.4.3",
     "fastify": "5.1.0",
     "zod": "3.23.8"
   }
