--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsup src --out-dir build",
     "test": "vitest run --dir src/use-cases",
     "test:watch": "vitest run --dir src/use-cases",
-    "test:e2e": "vitest run --dir src/htpp",
+    "pretest:e2e": "cd prisma/vitest-environment-prisma && npm link",
+    "test:e2e": "vitest run --dir src/http",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
   },
@@ -34,6 +35,7 @@
     "@prisma/client": "6.0.1",
     "bcryptjs": "2.4.3",
     "dayjs": "1.11.13",
+    "dotenv": "16.4.7",
     "fastify": "5.1.0",
     "zod": "3.23.8"
   }
