--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vitest/coverage-v8": "2.1.8",
     "@vitest/ui": "2.1.8",
     "prisma": "6.0.1",
+    "supertest": "7.0.0",
     "tsup": "8.3.5",
     "tsx": "4.19.2",
     "typescript": "5.7.2",
