--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsup src --out-dir build",
     "test": "vitest run --dir src/use-cases",
     "test:watch": "vitest run --dir src/use-cases",
-    "pretest:e2e": "cd prisma/vitest-environment-prisma && npm link",
+    "pretest:e2e": "cd prisma/vitest-environment-prisma && npm link && cd .. && cd .. && npm link vitest-environment-prisma",
     "test:e2e": "vitest run --dir src/http",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
@@ -21,6 +21,7 @@
     "@biomejs/biome": "1.9.4",
     "@types/bcryptjs": "2.4.6",
     "@types/node": "22.10.1",
+    "@types/supertest": "6.0.2",
     "@vitest/coverage-v8": "2.1.8",
     "@vitest/ui": "2.1.8",
     "prisma": "6.0.1",
