--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:watch": "vitest run --dir src/use-cases",
     "pretest:e2e": "cd prisma/vitest-environment-prisma && npm link && cd .. && cd .. && npm link vitest-environment-prisma",
     "test:e2e": "vitest run --dir src/http",
+    "test:e2e:watch": "vitest --dir src/http",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
   },
